syntax = "proto3";

//生成的go的语言包名
option go_package = "go_utils/rpc/service/hello";
//生成的php语言包名
option php_metadata_namespace = 'Fengsha\\Grpc';
option php_namespace = 'Fengsha\\Grpc';

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}